--- a/index.html
+++ b/index.html
@@ -4,9 +4,16 @@
   <title>Lists Lab</title>
 </head>
 <body>
-<li></li>
-  <!-- Write your HTML in this file -->
-
+<ul>
+  <li>Cheeseburgers</li>
+  <li>Grilled Cheese</li>
+  <li>Sushi</li>
+  <li>Nacho Cheese French Fries</li>
+  <li>Cheese soup</li>
+  <li>Macaroni and cheese</li>
+  <li>Cheese danishes</li>
+  <li>Cheese</li>
+</ul>
 </body>
 </html>
 
