--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
 <ul>
   <li>Cheeseburgers</li>
   <li>Grilled Cheese</li>
-  <li>Sushi</li>
+  <li>Sushi 
+   <ul> 
+     <li>Spicy Salmon Roll</li>
+     <li>Alaskan Roll</li>
+     <li>Shrimp Tempura Roll</li>
+   </ul>
+  </li>
   <li>Nacho Cheese French Fries</li>
   <li>Cheese soup</li>
   <li>Macaroni and cheese</li>
