--- a/index.html
+++ b/index.html
@@ -1,2 +1,25 @@
-#
+<!--<!DOCTYPE html>-->
+<!--<html lang="en">-->
+<!--<head>-->
+<!--  <title>Lists Lab</title>-->
+<!--</head>-->
+<!--<body>-->
+<!--<ul>-->
+<!--  <li>Cheeseburgers</li>-->
+<!--  <li>Grilled Cheese</li>-->
+<!--  <li>Sushi -->
+<!--   <ul> -->
+<!--     <li>Spicy Salmon Roll</li>-->
+<!--     <li>Alaskan Roll</li>-->
+<!--     <li>Shrimp Tempura Roll</li>-->
+<!--   </ul>-->
+<!--  </li>-->
+<!--  <li>Nacho Cheese French Fries</li>-->
+<!--  <li>Cheese soup</li>-->
+<!--  <li>Macaroni and cheese</li>-->
+<!--  <li>Cheese danishes</li>-->
+<!--  <li>Cheese</li>-->
+<!--</ul>-->
+<!--</body>-->
+<!--</html>-->
 
