automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-<!--<!DOCTYPE html>-->
-<!--<html lang="en">-->
-<!--<head>-->
-<!--  <title>Lists Lab</title>-->
-<!--</head>-->
-<!--<body>-->
-<!--<ul>-->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+   <title>Lists Lab</title>
+</head>
+<body>
+<ul>
 <!--  <li>Cheeseburgers</li>-->
 <!--  <li>Grilled Cheese</li>-->
 <!--  <li>Sushi -->
