automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
    <title>Lists Lab</title>
 </head>
 <body>
-<ul>-->
+<ul>
 <!--  <li>Cheeseburgers</li>-->
 <!--  <li>Grilled Cheese</li>-->
 <!--  <li>Sushi -->
@@ -19,7 +19,7 @@
 <!--  <li>Macaroni and cheese</li>-->
 <!--  <li>Cheese danishes</li>-->
 <!--  <li>Cheese</li>-->
-<!--</ul>-->
-<!--</body>-->
-<!--</html>-->
+</ul>
+</body>
+</html>
 
